Code Review Changes. Implemented.

--- a/MyILoggerLibrary/appsettings.json
+++ b/MyILoggerLibrary/appsettings.json
@@ -7,7 +7,22 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "EmployeeConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=EmployeeDb;Trusted_Conection=true"
+  "Seriallog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Temp\\CustomeMiddleWareLogs\\logs.txt",
+          "outputTemplate": "{Timestamp} {Level} {Message}{NewLine:1}{Exception:1}"
+        }
+      }
+    ]
   }
 }
